# 1flowbase

./: .1flowbase.verify.local.json.example  .dockerignore  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  DESIGN.md  README.md  audit-report-1flowbase-latest-2026-06-05.md
api/: AGENTS.md  Cargo.toml
api/apps/api-server/: .env.example  .env.production.example  Cargo.toml
api/apps/api-server/src/: app_state.rs  application_public_docs.rs  config.rs  error_response.rs  host_extension_loader.rs  lib.rs  main.rs  official_agent_flow_templates.rs  official_plugin_registry.rs  openapi.rs  openapi_docs.rs  provider_runtime.rs  runtime_activity.rs  runtime_data_model_docs.rs
api/apps/api-server/src/_tests/: auth_routes.rs  config_tests.rs  data_sources_routes.rs  docs_routes.rs  error_response_tests.rs  frontend_block_catalog_routes.rs  frontstage_routes.rs  host_infrastructure_memory_routes.rs  host_infrastructure_tests.rs  mcp_management_routes.rs  me_routes.rs  member_routes.rs  mod.rs  model_provider_routes.rs  official_plugin_registry_tests.rs  openapi_alignment.rs  openapi_docs_tests.rs  runtime_event_stream_tests.rs  session_routes.rs  system_routes.rs
api/apps/api-server/src/application_public_docs/: mod.rs  schemas.rs
api/apps/api-server/src/host_infrastructure/: local.rs  local_runtime_event_stream.rs  mod.rs
api/apps/api-server/src/middleware/: require_csrf.rs  require_session.rs
api/apps/api-server/src/openapi/: mod.rs
api/apps/api-server/src/provider_runtime/: mod.rs
api/apps/api-server/src/routes/: files.rs  helpers.rs  mod.rs
api/apps/api-server/src/runtime_profile_client/: mod.rs
api/apps/api-server/src/runtime_registry_sync/: mod.rs
api/apps/api-server/src/workers/: mod.rs  native_resume.rs
api/apps/api-server/tests/: health_routes.rs
api/apps/plugin-runner/: Cargo.toml
api/apps/plugin-runner/src/: capability_host.rs  capability_stdio.rs  data_source_host.rs  data_source_stdio.rs  lib.rs  provider_host.rs  stdio_runtime.rs
api/apps/plugin-runner/src/provider_host/: operations.rs
api/apps/plugin-runner/tests/: capability_runtime_routes.rs  provider_runtime_routes.rs  provider_stdio_streaming_tests.rs
api/crates/access-control/src/: catalog.rs
api/crates/access-control/src/_tests/: catalog_mcp_management_tests.rs  catalog_tests.rs  mod.rs
api/crates/control-plane/: Cargo.toml
api/crates/control-plane/src/: capability_runtime.rs  data_source.rs  frontstage.rs  js_dependency.rs  lib.rs  mcp_management.rs  model_provider.rs  orchestration_runtime.rs  plugin_lifecycle.rs  resource_crud.rs  runtime_registry_sync.rs  system_metadata.rs
api/crates/control-plane/src/_tests/: data_source_service_tests.rs  ephemeral_inspection_contract_tests.rs  host_infrastructure_contract_tests.rs  mod.rs  model_definition_service_tests.rs  node_contribution_service_tests.rs  resource_crud_tests.rs  support.rs  system_metadata_tests.rs
api/crates/control-plane/src/application/: mod.rs
api/crates/control-plane/src/application_public_api/: api_keys.rs  callback_resume.rs  callback_tool_ids.rs  client_protocol_envelope.rs  conversations.rs  mod.rs  model_catalog.rs  native.rs  publications.rs  run_service.rs
api/crates/control-plane/src/audit/: mod.rs
api/crates/control-plane/src/auth/: mod.rs
api/crates/control-plane/src/bootstrap/: mod.rs
api/crates/control-plane/src/capability_plugin_runtime/: mod.rs
api/crates/control-plane/src/data_source/: mod.rs
api/crates/control-plane/src/external_agent_bridge/: mod.rs
api/crates/control-plane/src/flow/: agentflow_template.rs  mod.rs
api/crates/control-plane/src/flow_run_title/: mod.rs
api/crates/control-plane/src/frontend_block_catalog/: mod.rs
api/crates/control-plane/src/frontstage/: mod.rs
api/crates/control-plane/src/host_extension/: mod.rs
api/crates/control-plane/src/host_extension_inventory/: mod.rs
api/crates/control-plane/src/member/: mod.rs
api/crates/control-plane/src/model_definition/: advisor.rs  commands.rs  external_keys.rs  in_memory_repository.rs  mod.rs  naming.rs  service.rs
api/crates/control-plane/src/model_provider/: balance.rs  catalog.rs  main_instance.rs  options.rs  shared.rs
api/crates/control-plane/src/orchestration_runtime/: answer_presentation.rs  compile_context.rs  data_model_runtime.rs  debug_artifacts.rs  debug_event_persister.rs  debug_stream_events.rs  http_response_files.rs  inputs.rs  json_payload.rs  live_debug_run.rs  llm_observability_refs.rs  payloads.rs  persistence.rs  provider_invoker.rs  runtime_event_persister.rs  scheduler_admission.rs  tests.rs  trace_projection.rs
api/crates/control-plane/src/plugin_management/: artifact_instance.rs  catalog.rs  catalog_projection.rs  family.rs  install.rs  mod.rs
api/crates/control-plane/src/ports/: application.rs  application_public_api.rs  auth.rs  data_source.rs  flow.rs  frontstage.rs  infrastructure.rs  mcp_management.rs  mod.rs  model_definition.rs  plugin.rs  runtime.rs
api/crates/control-plane/src/profile/: mod.rs
api/crates/domain/src/: application.rs  auth.rs  flow.rs  frontend_block_catalog.rs  frontstage.rs  js_dependency.rs  lib.rs  mcp_management.rs  model_provider.rs  node_contribution.rs  orchestration.rs  resource_filter.rs  runtime_observability.rs
api/crates/orchestration-runtime/: Cargo.toml
api/crates/orchestration-runtime/src/: answer_presentation.rs  answer_projection.rs  binding_runtime.rs  code_executor_capability.rs  code_runtime.rs  compiled_plan.rs  compiler.rs  execution_engine.rs  execution_state.rs  lib.rs  node_error_policy.rs  node_errors.rs  output_schema.rs  payload_builder.rs  preview_executor.rs
api/crates/plugin-framework/: Cargo.toml
api/crates/plugin-framework/src/: error.rs  lib.rs  manifest_v1.rs  package_intake.rs  provider_contract.rs  provider_package.rs
api/crates/runtime-core/src/: runtime_acl.rs  runtime_engine.rs  runtime_record_repository.rs
api/crates/storage-durable/postgres/: Cargo.toml
api/crates/storage-durable/src/: lib.rs  runtime.rs
api/plugins/host-extensions/official.local-infra-host/: host-extension.yaml
(+1674 files in other folders)
