[workspace]
members = [
  "apps/api-server",
  "apps/plugin-runner",
  "crates/domain",
  "crates/control-plane",
  "crates/orchestration-runtime",
  "crates/runtime-core",
  "crates/runtime-profile",
  "crates/publish-gateway",
  "crates/access-control",
  "crates/plugin-framework",
  "crates/storage-durable/postgres",
  "crates/storage-durable",
  "crates/storage-ephemeral",
  "crates/storage-object",
  "crates/observability"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.9"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
flate2 = "1"
futures-util = "0.3"
http = "1"
jsonschema = "0.46.5"
moka = { version = "0.12.15", features = ["future"] }
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
rquickjs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
sysinfo = "0.33"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "macros", "time", "json", "migrate"] }
tar = "0.4.46"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v7"] }

[profile.dev]
debug = 1

[profile.test]
debug = 1
