[package]
name = "api-server"
version = "0.2.3"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
axum-extra.workspace = true
base64.workspace = true
flate2.workspace = true
form_urlencoded = "1"
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tar.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
domain = { path = "../../crates/domain" }
control-plane = { path = "../../crates/control-plane" }
runtime-core = { path = "../../crates/runtime-core" }
publish-gateway = { path = "../../crates/publish-gateway" }
access-control = { path = "../../crates/access-control" }
plugin-framework = { path = "../../crates/plugin-framework" }
storage-durable = { path = "../../crates/storage-durable" }
storage-ephemeral = { path = "../../crates/storage-ephemeral" }
storage-object = { path = "../../crates/storage-object" }
observability = { path = "../../crates/observability" }
plugin-runner = { path = "../plugin-runner" }
runtime-profile = { path = "../../crates/runtime-profile" }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["pem"] }
