[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
access-control = { path = "../access-control" }
domain = { path = "../domain" }
observability = { path = "../observability" }
orchestration-runtime = { path = "../orchestration-runtime" }
plugin-framework = { path = "../plugin-framework" }
runtime-profile = { path = "../runtime-profile" }
rand_core.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage-object = { path = "../storage-object" }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
runtime-core = { path = "../runtime-core" }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["pem"] }
flate2.workspace = true
tar.workspace = true
