[package]
name = "orchestration-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jsonschema.workspace = true
plugin-framework = { path = "../plugin-framework" }
regex.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
