[package]
name = "storage-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
access-control = { path = "../../access-control" }
anyhow.workspace = true
async-trait.workspace = true
chacha20poly1305.workspace = true
control-plane = { path = "../../control-plane" }
domain = { path = "../../domain" }
runtime-core = { path = "../../runtime-core" }
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
